# netem_rs

./: Cargo.toml  README.md  build.rs  env.sh
examples/: csma_old.rs  csma_parallel.rs  csma_state.rs  des.rs  empty_des.rs  simple_forward.rs  simple_remote.rs
examples/csma/: csma.rs  main.rs
proto/: actor.proto  common.proto  remote_port.proto  remote_xdp_port.proto
src/: actor.rs  lib.rs  meta.rs  route_table.rs  xdp.rs
src/des/: batch.rs  mod.rs  parallel.rs  realtime_executor.rs  serialize.rs  state.rs
src/port/: mod.rs  port_table.rs  xdp.rs
src/port/grpc/: mod.rs
src/port/xdp/: local.rs  mod.rs  remote.rs
src/proto/: actor.rs  common.rs  mod.rs  remote_port.rs  remote_xdp_port.rs
src/runtime/: local.rs  mod.rs  remote.rs
